--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.2",
-    "useragent": "^2.2.1"
+    "express": "^4.16.2"
   },
   "engines": {
     "node": "8.x"
